@@ -242,13 +242,21 @@ class tableAPIController{
         // foreach($rows0 as $row){
         //     $rows[$row['id']] = $row;
         // }
-
-        
-        return $this->success('',[
+        $default = '';
+        if(isset($autocomplete['default_row']) and is_array($autocomplete['default_row'])){
+            if($obj = $this->modx->getObject($autocomplete['class'],$autocomplete['default_row'])){
+                $default = $obj->id;
+            }
+        }
+        $out = [
             'rows'=>$rows0,
             'total'=>$total,
-            'log'=>$this->pdo->getTime()
-        ]);
+            'default'=>$default,
+            // 'log'=>$this->pdo->getTime()
+        ];
+        if($rule['properties']['showLog']) $out['log'] = $this->pdo->getTime();
+        
+        return $this->success('',$out);
     }
     public function request_array_to_json($request){
         $req = [];
